--- a/vignettes/action-potential-analysis.Rmd
+++ b/vignettes/action-potential-analysis.Rmd
@@ -217,13 +217,15 @@ Do not discard this cell; this is important and meaningful data! Fill in only th
 knitr::include_graphics("figures/APs-outside-sweep.png")
 ```
 
-This can happen with very excitable cells. Only count the action potentials that occured within the injection period.
-
-
+This can happen with very excitable cells. Only count the action potentials that occurred within the injection period.
 
 *Should I count an action potential that looks very wavy?*
 
-Only include the action potential if it clearly crosses the threshold and it has an after-hyperpolarization period.
+```{r aps-wavy, fig.align = 'center', fig.alt = "A screenshot of a recording in Clampfit showing wavy action potentials. Valid action potentials are indicated with check marks", echo=F}
+knitr::include_graphics("figures/APs-outside-sweep.png")
+```
+
+Only include the action potential if it clearly crosses the threshold, comes to a sharp peak, and has an after-hyperpolarization period.
 
 References
 
