--- a/vignettes/evoked-current-analysis.Rmd
+++ b/vignettes/evoked-current-analysis.Rmd
@@ -5,25 +5,25 @@ description: >
   Learn how to analyze raw evoked current data in Clampfit and prepare it
   for use with the package patchclampplotteR.
 vignette: >
-  %\VignetteIndexEntry{evoked-current-analysis}
+  %\VignetteIndexEntry{Evoked Current Analysis}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
 
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
-  collapse = TRUE,
-  comment = "#>"
+  fig.align = "center",
+  out.extra='',
+  out.width="75%",
+  echo = FALSE
 )
 ```
-
-# Evoked Current Analysis
 
 Before using `patchclampplotteR`, you will need to prepare your raw recording data from Clampfit. This vignette will show you how to move your evoked post-synaptic current data from raw .abf recordings to a .csv file.
 
 This demonstration uses a protocol with two stimuli resulting in two evoked currents per sweep. The paired-pulse ratio (PPR) is the ratio of the second evoked current amplitude to the first.
 
-```{r evoked-currents-schematic, fig.align = 'center', fig.alt = "A sketch showing a horizontal line with two downward-pointing peaks separated by a short distance. These are the two evoked currents.", fig.cap = "This drawing shows the first and second evoked currents. The ratio between them is the paired-pulse ratio (PPR)", echo=F}
+```{r evoked-currents-schematic, fig.alt = "A sketch showing a horizontal line with two downward-pointing peaks separated by a short distance. These are the two evoked currents.", fig.cap = "This drawing shows the first and second evoked currents. The ratio between them is the paired-pulse ratio (PPR)"}
 knitr::include_graphics("figures/Evoked-currents-schematic.png")
 ```
 
@@ -35,7 +35,7 @@ knitr::include_graphics("figures/Evoked-currents-schematic.png")
 
 2. Click on `Analyze` -> `Concatenate Files` and select all files that belong to a recording from a single cell. All the recordings will be combined into a continuous recording with no gaps. 
 
-```{r concatenate, fig.align = 'center', fig.alt = "A screenshot of the Concatenate files dialog box in Clampfit showing that all files are selected.", echo=F}
+```{r concatenate, fig.alt = "A screenshot of the Concatenate files dialog box in Clampfit showing that all files are selected."}
 knitr::include_graphics("figures/Concatenate-files.png")
 ```
 
@@ -56,7 +56,7 @@ knitr::include_graphics("figures/Concatenate-files.png")
 
 5. You can also click on the `Auto Scale All Y Axes` button (orange arrow) to help you see the data faster.
 
-```{r viewer-buttons, fig.align = 'center', fig.alt = "A screenshot of the Show Signals buttons and other viewering buttons available in the upper toolbar in Clampfit.", echo=F}
+```{r viewer-buttons, fig.alt = "A screenshot of the Show Signals buttons and other viewering buttons available in the upper toolbar in Clampfit."}
 knitr::include_graphics("figures/Viewer-buttons.png")
 ```
 
@@ -68,7 +68,7 @@ knitr::include_graphics("figures/Viewer-buttons.png")
 
 8. Position Cursors 1 and 2 before the first stimulus artifact. Cursors 3 and 4 should surround the first evoked current, and Cursors 5 and 6 should surround the second evoked current.
 
-```{r evoked-currents-cursors, fig.align = 'center', fig.alt = "A screenshot of the correct cursor alignment in Clampfit.", echo=F}
+```{r evoked-currents-cursors, fig.alt = "A screenshot of the correct cursor alignment in Clampfit."}
 knitr::include_graphics("figures/Evoked-currents-cursors.png")
 ```
 
@@ -98,7 +98,7 @@ of it) or press `Alt+s`.
 
 > The Measurements options change for each search region, so make sure that both search regions only have `Peak_amplitude` checked!
 
-```{r evoked-currents-statistics, fig.align = 'center', fig.alt = "A screenshot of the correct statistics options selected in Clampfit.", echo=F}
+```{r evoked-currents-statistics, fig.alt = "A screenshot of the correct statistics options selected in Clampfit."}
 knitr::include_graphics("figures/Evoked-currents-statistics-box.png")
 ```
 
@@ -134,12 +134,4 @@ You can exclude individual traces (for example ones with lots of noise or a very
 
 You should save a new .csv file for each new batch of raw data (these are the .csv files with `Letter`, `ID`, `P1` and `P2`). You may find it efficient to wait until you have a week of recordings, then analyze these recordings all at once in Clampfit. These data will be in a .csv file named something like "20240708-eEPSC-data.csv".
 
-However, when writing a paper or thesis, you will use just one master csv file which contains the evoked current data for all recordings in the entire project. To append new data to this master csv, use the `add_new_cells()` function. Please see the Getting Started vignette for more details.
-
-
-
-
-
-
-
-
+However, when writing a paper or thesis, you will use just one master csv file which contains the evoked current data for all recordings in the entire project. To append new data to this master csv, use the `add_new_cells()` function. Please see the [Getting Started vignette](https://christelinda-laureijs.github.io/patchclampplotteR/articles/patchclampplotteR.html) for more details.
