--- a/vignettes/evoked-current-analysis.Rmd
+++ b/vignettes/evoked-current-analysis.Rmd
@@ -56,7 +56,7 @@ knitr::include_graphics("figures/Concatenate-files.png")
 
 5. You can also click on the `Auto Scale All Y Axes` button (orange arrow) to help you see the data faster.
 
-```{r viewer-buttons, fig.alt = "A screenshot of the Show Signals buttons and other viewering buttons available in the upper toolbar in Clampfit."}
+```{r viewer-buttons, out.width="25%", fig.alt = "A screenshot of the Show Signals buttons and other viewering buttons available in the upper toolbar in Clampfit."}
 knitr::include_graphics("figures/Viewer-buttons.png")
 ```
 
@@ -122,13 +122,19 @@ You are finished with the analysis in Clampfit!
 If you have these two files, you are ready to begin using `patchclampplotteR`! See the [Getting Started vignette](https://christelinda-laureijs.github.io/patchclampplotteR/articles/patchclampplotteR.html) to learn how to combine this data and use it with `patchclampplotteR`.
 
 
-## FAQ about evoked current analysis
+## FAQ
 
 *There are some traces with significant amounts of noise*
 
 You can exclude individual traces (for example ones with lots of noise or a very unstable baseline) in the Trace Selection box of Step 11. Select the traces you want to exclude, then `Invert` your selection.
 
-*What do I do if there are two peaks?*
+*What does it mean when there are two currents close together?*
+
+```{r multivesicular-release, fig.alt = "A screenshot of a recording with two currents after a stimulation. This is an example of multivesicular release."}
+knitr::include_graphics("figures/Multivesicular-release.png")
+```
+
+If you see two peaks instead of one expected evoked current, this could be an example of multivesicular release. Make a note of this, since the treatment could lead to changes in synaptic activity through this interesting mechanism.
 
 *I have some new recordings. Do I add them to my existing .csv files, or make new files?*
 
